# ca-thesis

./: .gitignore  CMakeLists.txt  README.md  build-standalone.sh  build-tracy.sh  build.sh  common.sh  debug.sh  run-tracy.sh  start.sh
resources/shaders/: lighting.fs  lighting_instancing.vs
src/: common.c  common.h  const.c  const.h  main.c  raylib_shim.h
src/cellular/: cells.c  cells.h  evolve.c  evolve.h
src/dstructs/: arena.c  arena.h
src/render/: font.c  font.h  light.h  menu.c  menu.h  menu_2d.c  menu_2d.h  menu_3d.c  menu_3d.h  render.c  render.h  render_2d.c  render_2d.h  render_3d.c  render_3d.h  rlights.h
tests/scratch/: ray.c
tests/standalone/: CMakeLists.txt  basics.c  parallel.c
tests/unit/: arena.c  cells.c  evolve.c
